# cpp-docker

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-build-and-test.yml
include/: foo.h
src/: foo.cpp
tests/: CMakeLists.txt  bar.cpp
